Menu builder language base selection in done.

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -161,6 +161,21 @@
               </div>
             </div>
           </div>
+          <div class="row">  
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="template">Select Template</label>
+                  <select class="form-control" id="template" formControlName="template" [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
+                    <option value="" selected>select template</option>
+                    <option *ngFor="let tempalte of gepTemplates;let i = index" [ngValue]="c">{{ tempalte.name }}</option>
+                  </select>
+                  <div *ngIf="submitted && form_control.template.errors" class="invalid-feedback">
+                    <div *ngIf="form_control.template.errors.required">must select one template
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </form>
       </div>
       <div class="modal-footer">
