--- a/application/clients/desktop/src/app/navigation/header-controls/header.language.component.html
+++ b/application/clients/desktop/src/app/navigation/header-controls/header.language.component.html
@@ -1,4 +1,4 @@
-<div class="lang-head">
+<!-- <div class="lang-head">
 
   <span *ngIf="hideElement">
     {{lastloggedintime | date: 'medium'}}
@@ -16,7 +16,6 @@
 
 
 
-<!-- about model -->
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':displayAboutModel}">
   <div class="modal-dialog modal-sm" role="dialog">
     <div class="modal-content">
@@ -34,4 +33,4 @@
     </div>
 
   </div>
-</div>
+</div> -->
