--- a/application/clients/desktop/src/app/user/profilesettings/profilesettings.component.html
+++ b/application/clients/desktop/src/app/user/profilesettings/profilesettings.component.html
@@ -10,7 +10,7 @@
     </div>
     <br>
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="Username" [(ngModel)]='Userobject.username' name="username">
+      <input type="text" class="form-control" [disabled]="true" placeholder="Username" [(ngModel)]='Userobject.username' name="username">
     </div>
     <div class="form-group">
       <input type="email" class="form-control" placeholder="Email" [(ngModel)]='Userobject.email' name="email">
