added the code generate feature

--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -1,8 +1,13 @@
 <div class="container">
     <br />
     <h1 style="text-align: center;">Project Components</h1>
+    <div class = 'code' >
+            <button class="btn btn-primary float-right" color="primary" (click)="generateCode()">code 
+                Generate</button>
+        </div>
     <br />
     <br />
+    <br>
     <!-- <button class="btn btn-success mb-sm-3 float-right">Generate</button> -->
     <div>
         <mat-accordion>
