css issue fixed

--- a/application/clients/desktop/src/app/app.component.html
+++ b/application/clients/desktop/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header-language></app-header-language>
 <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
-<div style="margin-bottom: 85px;"></div>
+<!-- <div style="margin-bottom: 85px;"></div> -->
 <router-outlet></router-outlet>
+    <!-- <app-footer></app-footer> -->
