--- a/application/clients/desktop/src/app/homepage/homepage.component.html
+++ b/application/clients/desktop/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
-<div class="geppetoimage1 test_123">
+<app-header></app-header>
+<div class="geppetoimage1 test_123 , element header_text">
   <div class="btn">
     <button color="primary" (click)="showAbout()">About</button>
   </div>
