--- a/application/clients/desktop/src/assets/scss/_mixins.scss
+++ b/application/clients/desktop/src/assets/scss/_mixins.scss
@@ -353,7 +353,7 @@
 		background-size: auto 200%;
 		line-height: 120px;
 		padding: 0 calc(50% - #{$m_footer_width / 2}); 
-		position: absolute;
+		position: fixed;
 		bottom: 0;
 		left: 0;
 		right: 0;
