--- a/application/clients/desktop/src/app/navigation/footer/footer.component.scss
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.scss
@@ -5,6 +5,25 @@
   font-size:15px;
   line-height:24px;
   color:#737373;
+  overflow: auto;
+  width: 100%;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
 }
 .site-footer a
 {
@@ -14,6 +33,10 @@
 {
   color:#3366cc;
   text-decoration:none;
+}
+.site-footer .social-icons
+{
+  text-align:right
 }
 .site-footer .social-icons a
 {
