--- a/application/clients/desktop/src/app/app.component.html
+++ b/application/clients/desktop/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-header-language></app-header-language>
-<app-header (sidenavToggle)="sidenav.toggle()"></app-header>
-<!-- <div style="margin-bottom: 85px;"></div> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
-    <!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
