--- a/application/clients/desktop/src/app/navigation/footer/footer.component.html
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.html
@@ -1,7 +1,4 @@
-<!-- <footer class="site-footer">
-  <div class="container">
-    <hr>
-  </div>
+<footer>
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-6 col-xs-12">
@@ -9,14 +6,14 @@
           <a href="#">Geppetto Software</a>.
         </p>
       </div>
-      <div class="col-md-4 col-sm-6 col-xs-12">
+      <!-- <div class="col-md-4 col-sm-6 col-xs-12">
         <ul class="social-icons">
           <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
           <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
           <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
-</footer> -->
+</footer>
