--- a/application/clients/desktop/src/styles.scss
+++ b/application/clients/desktop/src/styles.scss
@@ -35,14 +35,9 @@
  //-- 
 
 
-
-body,
-html,
-#app {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
+ html{ height:100%; }
+ body,#app{ min-height:100%; padding:0; margin:0; position:relative; }
+ #app,body::after{ content:''; display:block; height:100px; }
 
 .ag-cell-edit-input {
     width: 100%;
