Update styles for login & header dropdown

--- a/application/clients/desktop/src/assets/scss/_geppetto.scss
+++ b/application/clients/desktop/src/assets/scss/_geppetto.scss
@@ -41,7 +41,8 @@ div.geppetoimage[_ngcontent-c4] {
 // ======= LOGIN ======= 
 app-login {
 	> mat-card.cardsize,
-	.cardsize[_ngcontent-c4] {
+	.cardsize[_ngcontent-c4],
+	.cardsize[_ngcontent-c5] {
 		@include modal-login;
 	}
 }
