Fix update template issue

--- a/application/clients/desktop/src/app/template-screen/template-screen.component.html
+++ b/application/clients/desktop/src/app/template-screen/template-screen.component.html
@@ -5,11 +5,11 @@
         Geppetto Templates
       </h1>
     </div>
-    <div class="col-md-12">
+    <!-- <div class="col-md-12">
       <div class="row-button">
         <button class="btn btn-success pull-right">Add Template </button>
       </div>
-    </div>
+    </div> -->
     <div class="content">
       <div class="container">
         <div class="row">
