--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
@@ -7,6 +7,15 @@
     top: 0;
 }
 
+.mainDiv {
+    height: auto;
+    position: absolute;
+    top: 84px;
+    left: 0;
+    right: 0;
+    bottom: 100px;
+}
+
 .logo-circ-small {
     width: 30px;
     height: 30px;
