--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- Removed the class name for login as the footer was conflicting with the login card -->
+
 <mat-card class="cardsize">
     <mat-card-header class="imagealign">
         <div mat-card-avatar>
