--- a/application/clients/desktop/src/app/navigation/footer/footer.component.html
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- <footer>
   <p class="copyright-text">Copyright &copy; 2019 All Rights Reserved by
-    <a href="#">Geppetto Software</a>.
+    <a>Geppetto Software</a>.
   </p>
 </footer> -->
 
@@ -8,7 +8,8 @@
   <div class="container">
     <div class="row row-30">
       <div class="col-md-4 col-xl-5">
-        <div class="pr-xl-4"><a class="brand" href="index.html"><img class="brand-logo-light" src="images/agency/logo-inverse-140x37.png" alt="" width="140" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a>
+        <div class="pr-xl-4">
+          <!-- <a class="brand" href="index.html"><img class="brand-logo-light" src="images/agency/logo-inverse-140x37.png" alt="" width="140" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a> -->
           <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion, business consulting, and marketing.</p>
           <!-- Rights-->
           <p class="rights"><span>©  </span><span class="copyright-year">2019</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved  by Geppetto Software.</span></p>
@@ -18,7 +19,7 @@
         <h5>Contacts</h5>
         <dl class="contact-list">
           <dt>Address:</dt>
-          <dd>798 South Park Avenue, Jaipur, Raj</dd>
+          <dd>798 South Park Avenue, Orlando</dd>
         </dl>
         <dl class="contact-list">
           <dt>email:</dt>
@@ -33,19 +34,19 @@
       <div class="col-md-4 col-xl-3">
         <h5>Links</h5>
         <ul class="nav-list">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contacts</a></li>
-          <li><a href="#">Pricing</a></li>
+          <li class="ispoint"><a>About</a></li>
+          <li class="ispoint"><a>Projects</a></li>
+          <li class="ispoint"><a>Blog</a></li>
+          <li class="ispoint"><a>Contacts</a></li>
+          <li class="ispoint"><a>Pricing</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="row no-gutters social-container">
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
+    <div class="col"><a class="social-inner"><span class="icon mdi mdi-facebook"></span><span class="ispoint">Facebook</span></a></div>
+    <div class="col"><a class="social-inner"><span class="icon mdi mdi-instagram"></span><span class="ispoint">instagram</span></a></div>
+    <div class="col"><a class="social-inner"><span class="icon mdi mdi-twitter"></span><span class="ispoint">twitter</span></a></div>
+    <div class="col"><a class="social-inner"><span class="icon mdi mdi-youtube-play"></span><span class="ispoint">google</span></a></div>
   </div>
 </footer>
