Login screen scroll and footer issue fixed.

--- a/application/clients/desktop/src/app/login/login.component.scss
+++ b/application/clients/desktop/src/app/login/login.component.scss
@@ -85,3 +85,18 @@ a:hover {
   margin-left: -31px !important;
   margin-top: 4px !important;
 }
+.modal-dialog {
+  margin: 12.75rem auto;
+}
+.cardsize button {
+  background-color: #033668;
+   border-bottom: 3px solid #033668; 
+}
+
+.cardsize button:hover {
+  background-color: #39a521;
+   border-bottom: 3px solid #2d831a; 
+}
+.pading_top{
+  padding-top:1%;
+}
