--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bottom_align">
   <div class="row" style="margin-top: 50px;">
     <div class="col-md-12">
       <div class="row-button">
